# clinic-care

./: .gitignore  Cargo.toml  index.html  style.css
.github/workflows/: build.yml
src/: main.rs  models.rs  store.rs  tauri_bridge.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src/components/: animations.rs  mod.rs  sidebar.rs  toast.rs
src/pages/: appointments.rs  document.rs  drugs.rs  edit_patient.rs  expenses.rs  history.rs  home.rs  mod.rs  not_found.rs  register.rs  report.rs  search.rs  settings.rs  sticker.rs  treatment.rs
