[package]
name = "clinic_app"
version = "1.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.11"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
gloo-timers = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "Storage",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "Location",
] }
wasm-bindgen-futures = "0.4"

